# EigenNN

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  Pipfile  README.md  setup.py
include/: activation.hpp  definitions.hpp  dnn.hpp  helpers.hpp  layer.hpp
py_src/: pyactivation.cpp  pydnn.cpp  pylayer.cpp  pymain.cpp
src/: dnn.cpp  layer.cpp
tests/: activation.cpp  dnn.cpp  layer.cpp  test_dnn.py
